fix: adjust z-index values for improved layering of elements

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -155,7 +155,7 @@ body {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 12px;
   border-radius: 5px;
-  z-index: 50;
+  z-index: 1;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   line-height: 1.3;
   transition: right 0.3s ease-in-out;
